--- a/Templates/index.html
+++ b/Templates/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Styles/main.css">
+    <link rel="stylesheet" href="/Assets/CSS/main.css">
+    <link rel="stylesheet" href="/Assets/CSS/Home.css">
     <!-- Bootstrap CSS - CDN -->
     <link
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
@@ -13,6 +14,18 @@
     <title>NSBM</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <div class="logo">Your Logo</div>
+        <nav>
+          <ul>
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">About Us</a></li>
+          </ul>
+        </nav>
+      </header>
+
+
+
 </body>
 </html>
