add light logo - nav bar

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -119,7 +119,7 @@
             <a class="brand-text" href="index.html"
             ><img
                 class="img-logo"
-                src="/Assets/Images/Logo.png"
+                src="/Assets/Images/Logo_light.png"
                 alt="GPAC Logo"
             /></a>
         </div>
