--- a/Templates/base.html
+++ b/Templates/base.html
@@ -79,7 +79,7 @@
             <a class="brand-text" href="index.html"
             ><img
                 class="img-logo"
-                src="/Assets/Images/Logo.png"
+                src="/Assets/Images/Logo_light.png"
                 alt="GPAC Logo"
             /></a>
         </div>
