modify hero section for easy codes"

--- a/Templates/base.html
+++ b/Templates/base.html
@@ -67,10 +67,15 @@
     </header>
     <!-- nav bar end -->
     <!-- hero section start -->
+    <div class="main-wrapper">
+      <!-- Your code Start here -->
 
 
+      
 
 
+      <!-- Your code Start here -->
+    </div>
     <!-- hero section end -->
     <!-- footer start -->
     <footer id="bottom" class="w-100">
