--- a/Assets/CSS/Home.css
+++ b/Assets/CSS/Home.css
@@ -1,13 +1,8 @@
 @import url("main.css");
 
-* {
-  margin: 0px 0 0 0 ;
-  padding: 0;
-  margin-bottom: 0px;
 
 
-  font-family: Poppins, sans-serif;
-}
+
 header {
  margin-top: 0px;
 }
@@ -18,6 +13,9 @@ header {
    font-family: "Poppins", sans-serif;
    font-weight: bolder;
    text-align: center;
+   position: relative;
+   margin-top: 100px;
+
 }
 
 .sub-heading {
@@ -26,6 +24,7 @@ header {
     font-weight: 600;
    text-align: center;
     font-size: 16px;
+    
 }
 .sub-heading .style_1 {
   font-size: 20px;
