--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -1,6 +1,8 @@
 /* Import Poppins font */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
+
+
 /* Define global variables */
 :root {
   --primary-color: #00a3ff;
@@ -10,6 +12,8 @@
   --text-light-color: #fafdff;
   --bg-light-color: #fafafa;
   --shadow-dark: rgba(0, 0, 0, 0.1);
+  --table-back:rgba(157, 213, 245, 0.2);
+  --btn_back: rgba(0, 163, 255, 0.4);
 }
 
 * {
@@ -155,6 +159,10 @@ a {
 }
 
 .footer-section a {
+  color: var(--text-light-color); 
+  text-decoration: none;
+}
+.link_nsbm a {
   color: var(--text-light-color); 
   text-decoration: none;
 }
