--- a/Templates/index.html
+++ b/Templates/index.html
@@ -11,13 +11,11 @@
           rel="stylesheet" 
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
           crossorigin="anonymous">
-          <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <title>NSBM</title>
 </head>
 <body>
     <div class="main-wrapper">
+    <!-- nav bar start -->
     <header>
         <nav class="navbar navbar-expand-lg fixed-top w-full bg-body-tertiary">
             <div class="container-fluid px-lg-4">
@@ -44,7 +42,7 @@
                     <a
                       class="nav-link active"
                       aria-current="page"
-                      href="#"
+                      href="index.html"
                       >Home</a
                     >
                   </li>
@@ -67,52 +65,83 @@
             </div>
           </nav>
     </header>
-    
-
-      <div class="centered-text">
-        <p>Calculate Your GPA </p>
-    </div>
+    <!-- nav bar end -->
+    <!-- hero section start -->
 
 
-    <div class="container">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Course</th>
-                    <th>Grade</th>
-                    <th>Credits</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><input type="text" name="courseName[]" placeholder="Enter course name"></td>
-                    <td><input type="text" name="grade[]" placeholder="Enter grade"></td>
-                    <td><input type="text" name="credits[]" placeholder="Enter credits"></td>
-                    <td><button type="button" onclick="removeRow(this)">Remove</button></td>
-                </tr>
-                
-                <tr>
-                    <td>SE</td>
-                    <td>B</td>
-                    <td>2</td>
-                    <td>X</td>
-                </tr>
-                <tr>
-                    <td>OS</td>
-                    <td>B+</td>
-                    <td>2</td>
-                    <td>X</td>
-                </tr>
-                <tr>
-                    <td colspan="3">Semester 1 GPA:</td>
-                    <td class="gpa">1.00</td>
-                </tr>
-            </tbody>
-        </table>
-        <button class="add-course">Add Course</button>
-        <button class="semester-gpa">Semester GPA</button>
-    </div>
+ <header>
+        <h1 class="main-heading">Calculate Your GPA</h1>
+        <h3 class="sub-heading">
+          Unlock Your Academic Potential with
+          <span class="style_1">
+           GPA.
+          </span> 
+          <span class="style_2">
+           Connect 
+          </span>
+          <span class="style_3">
+            <br>
+          Your Gateway to Educational Success and Career Opportunities!
+          </span>
+        </h3>
+    </header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- hero section end -->
+    <!-- footer start -->
     <footer id="bottom" class="w-100">
         <div class="footer">
         <div class="footer-section flex-grow-1 mb-3">
@@ -140,7 +169,7 @@
         <span
           >Designed and developed by Software Engineering Undergraduates</span
         >
-        <span
+        <span class="link_nsbm"
           ><a rel="noopener" href="https://nsbm.ac.lk" target="_blank"
             >NSBM Green University</a
           ></span
@@ -153,11 +182,14 @@
       <span>Cookies</span>
     </div>
   </footer>
+  <!-- footer end -->
 </div>
-  <script
+    <!-- Bootstrap JS - CDN -->
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
       integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
       crossorigin="anonymous">
     </script>
 </body>
 </html>
+ 
