--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,195 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Assets/CSS/main.css">
-    <link rel="stylesheet" href="/Assets/CSS/Home.css">
-    <!-- Bootstrap CSS - CDN -->
-    <link
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
-          rel="stylesheet" 
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
-          crossorigin="anonymous">
-    <title>NSBM</title>
-</head>
-<body>
-    <div class="main-wrapper">
-    <!-- nav bar start -->
-    <header>
-        <nav class="navbar navbar-expand-lg fixed-top w-full bg-body-tertiary">
-            <div class="container-fluid px-lg-4">
-              <a class="navbar-brand" href="#"
-                ><img
-                  class="img-logo"
-                  src="/Assets/Images/Logo.png"
-                  alt="GPAC Logo"
-              /></a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a
-                      class="nav-link active"
-                      aria-current="page"
-                      href="index.html"
-                      >Home</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">FAQ</a>
-                  </li>
-                </ul>
-                <a href="#">
-                  <button class="btn btn-secondary" type="button">Sign Up</button>
-                </a>
-                <a class="mx-1" href="#">
-                  <button class="btn btn-outline-primary" type="button">
-                    Sign In
-                  </button>
-                </a>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <!-- nav bar end -->
-    <!-- hero section start -->
+{% extends 'base.html' %}
+
+{% block content %}
+
+    
+    <form action="/calgpa" method="post">
+        <label for="degree">Choose a Degree Program:</label>
+        <select id="degree" name="degree">
+            {% for program in data %}
+                <option value="{{ program[0] }}">{{ program[1] }}</option>
+            {% endfor %}
+        </select>
+        <br>
+
+        <input type="submit" value="Submit">
+    </form>
 
 
- <header>
-        <h1 class="main-heading">Calculate Your GPA</h1>
-        <h3 class="sub-heading">
-          Unlock Your Academic Potential with
-          <span class="style_1">
-           GPA.
-          </span> 
-          <span class="style_2">
-           Connect 
-          </span>
-          <span class="style_3">
-            <br>
-          Your Gateway to Educational Success and Career Opportunities!
-          </span>
-        </h3>
-    </header>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- hero section end -->
-    <!-- footer start -->
-    <footer id="bottom" class="w-100">
-        <div class="footer">
-        <div class="footer-section flex-grow-1 mb-3">
-            <a class="brand-text" href="index.html"
-            ><img
-                class="img-logo"
-                src="/Assets/Images/Logo_light.png"
-                alt="GPAC Logo"
-            /></a>
-        </div>
-        <div class="footer-section flex-grow-1">
-            <ul>
-            <li>
-                <a href="#">Home</a>
-            </li>
-            <li>
-                <a href="#">About Us</a>
-            </li>
-            <li>
-                <a href="#">FAQ</a>
-            </li>
-            </ul>
-        </div>
-      <div class="site-info">
-        <span
-          >Designed and developed by Software Engineering Undergraduates</span
-        >
-        <span class="link_nsbm"
-          ><a rel="noopener" href="https://nsbm.ac.lk" target="_blank"
-            >NSBM Green University</a
-          ></span
-        >
-      </div>
-    <hr class="w-100 divider" height="2" />
-    <div class="footer-end">
-      <span>Copyright &copy; 2023 | All rights reserved.</span>
-  
-      <span>Cookies</span>
-    </div>
-  </footer>
-  <!-- footer end -->
-</div>
-    <!-- Bootstrap JS - CDN -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
-      integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
-      crossorigin="anonymous">
-    </script>
-</body>
-</html>
- 
+{% endblock %}
