--- a/Templates/base.html
+++ b/Templates/base.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Assets/CSS/main.css">
-    <link rel="stylesheet" href="/Assets/CSS/Home.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/home.css') }}">
     <!-- Bootstrap CSS - CDN -->
     <link
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
@@ -17,107 +17,25 @@
     <div class="main-wrapper">
     <!-- nav bar start -->
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top w-full bg-body-tertiary">
-            <div class="container-fluid px-lg-4">
-              <a class="navbar-brand" href="#"
-                ><img
-                  class="img-logo"
-                  src="/Assets/Images/Logo.png"
-                  alt="GPAC Logo"
-              /></a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a
-                      class="nav-link active"
-                      aria-current="page"
-                      href="index.html"
-                      >Home</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">FAQ</a>
-                  </li>
-                </ul>
-                <a href="#">
-                  <button class="btn btn-secondary" type="button">Sign Up</button>
-                </a>
-                <a class="mx-1" href="#">
-                  <button class="btn btn-outline-primary" type="button">
-                    Sign In
-                  </button>
-                </a>
-              </div>
-            </div>
-          </nav>
+      {% include 'nav.html' %}
     </header>
     <!-- nav bar end -->
     <!-- hero section start -->
-    <div class="main-wrapper">
+    
       <!-- Your code Start here -->
+      {% block content %}
+
+      {% endblock %}
 
 
-      
 
 
       <!-- Your code Start here -->
-    </div>
+    
     <!-- hero section end -->
     <!-- footer start -->
-    <footer id="bottom" class="w-100">
-        <div class="footer">
-        <div class="footer-section flex-grow-1 mb-3">
-            <a class="brand-text" href="index.html"
-            ><img
-                class="img-logo"
-                src="/Assets/Images/Logo_light.png"
-                alt="GPAC Logo"
-            /></a>
-        </div>
-        <div class="footer-section flex-grow-1">
-            <ul>
-            <li>
-                <a href="#">Home</a>
-            </li>
-            <li>
-                <a href="#">About Us</a>
-            </li>
-            <li>
-                <a href="#">FAQ</a>
-            </li>
-            </ul>
-        </div>
-      <div class="site-info">
-        <span
-          >Designed and developed by Software Engineering Undergraduates</span
-        >
-        <span
-          ><a rel="noopener" href="https://nsbm.ac.lk" target="_blank"
-            >NSBM Green University</a
-          ></span
-        >
-      </div>
-    <hr class="w-100 divider" height="2" />
-    <div class="footer-end">
-      <span>Copyright &copy; 2023 | All rights reserved.</span>
-  
-      <span>Cookies</span>
-    </div>
-  </footer>
+    {% include 'footer.html' %}
+        
   <!-- footer end -->
 </div>
     <!-- Bootstrap JS - CDN -->
